# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Possible fix
  for autouse() that will prevent recursion and locks.
  
*portage-2.0.51_pre210 (09 Sep 2004): (pre-pre release for 21)
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> archive-conf: Added patch
  so that it runs.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> dispatch-conf: Added patch
  to die when rcs isn't installed but is required by options.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> ebuild.sh: Solar's checks
  for suid bind issues.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> fixvardbentries: Updated
  to Jason's current script.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> g-cpan.pl: Added a fix
  to store the ebuilds in a defined overlay.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> output.py: Added all
  xterm* terms to the title-list.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Fixed the
  cascade/stack functions -- use.defaults is fully line-incremental now.
  Removed a lot of cruft commented-code. Added an ebuild-mover into the
  entry move functions.
  
  09 Sep 2004; Nicholas Jones <carpaski@gentoo.org> portage_util.py: Placed
  the lex code into a try/except so we can add the filename into the error
  that is passed back from shlex.
  
  08 Sep 2004; Brian Harring <ferringb@gentoo.org> portage.py: Modified
  config.__init__(clone=1) so that profiles list is preserved, allowing for 
  all profile's bashrc's to be sourced.

  06 Sep 2004; Brian Harring <ferringb@gentoo.org> portage.py: Fixed 